[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/scenes/1/Door_Light.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/1/Background.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/2/closet.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/1/DustOverlay.png" type="Texture" id=4]
[ext_resource path="res://assets/scenes/1/Floor.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Transition_Scene.tscn" type="PackedScene" id=6]
[ext_resource path="res://assets/scenes/2/door-bathroom.png" type="Texture" id=7]
[ext_resource path="res://Scripts/Corridor1.gd" type="Script" id=10]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=12]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1917.37, 972.226, 1917.37, 1083.6, -6.08282, 1083.14, -3.9639, 979.309 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( -3.9639, 979.309, -6.08282, 1083.14, 1917.37, 1083.6, 1917.37, 972.226 ) ]

[node name="Corridor" type="Node"]
script = ExtResource( 10 )

[node name="Control" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 954.44, 546.933 )
mouse_filter = 2
mouse_default_cursor_shape = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area_Move" type="Control" parent="Control"]
anchor_top = 0.887
anchor_right = 0.999
anchor_bottom = 1.001
margin_top = 0.039978
margin_right = -419.08
margin_bottom = 82.9199
rect_scale = Vector2( 1.28, 0.6 )
mouse_default_cursor_shape = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Environment" type="Node" parent="Control"]

[node name="Background" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 2 )
centered = false

[node name="Floor" type="Sprite" parent="Control/Environment"]
position = Vector2( 6.10352e-05, 0 )
scale = Vector2( 1, 1.00196 )
z_index = -1
texture = ExtResource( 5 )
centered = false

[node name="Door_Light" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 1 )
centered = false
flip_h = true

[node name="Door_Light2" type="Sprite" parent="Control/Environment"]
position = Vector2( 959.293, 545.028 )
texture = ExtResource( 1 )

[node name="closet" type="Sprite" parent="Control/Environment"]
position = Vector2( 628.158, 527.759 )
texture = ExtResource( 3 )

[node name="door-bathroom" type="Sprite" parent="Control/Environment"]
position = Vector2( 1085.77, 628.089 )
z_index = -1
texture = ExtResource( 7 )

[node name="Botoes" type="Node" parent="Control"]

[node name="Safe" type="TextureButton" parent="Control/Botoes"]
margin_left = 383.0
margin_top = 491.0
margin_right = 745.0
margin_bottom = 971.0
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door" type="TextureButton" parent="Control/Botoes"]
margin_left = 1680.0
margin_top = 424.0
margin_right = 1922.0
margin_bottom = 981.0
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door2" type="TextureButton" parent="Control/Botoes"]
margin_left = -2.0
margin_top = 426.0
margin_right = 273.0
margin_bottom = 983.0
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Door3" type="TextureButton" parent="Control/Botoes"]
margin_left = 972.0
margin_top = 462.0
margin_right = 1333.0
margin_bottom = 989.0
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation2D" type="Navigation2D" parent="Control"]
position = Vector2( 1.69409, -4.51978 )

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Control/Navigation2D"]
z_index = -1
navpoly = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="Control"]
position = Vector2( 1319.2, 1013.98 )
z_index = 5
points = PoolVector2Array( 599.861, 66.9915 )

[node name="DustOverlay" type="Sprite" parent="."]
position = Vector2( 958.415, 541.945 )
z_index = 4
texture = ExtResource( 4 )

[node name="Transition_Scene" parent="." instance=ExtResource( 6 )]
[connection signal="pressed" from="Control/Botoes/Safe" to="." method="_on_Safe_pressed"]
[connection signal="pressed" from="Control/Botoes/Door" to="." method="_on_Door_pressed"]
[connection signal="pressed" from="Control/Botoes/Door2" to="." method="_on_Door2_pressed"]
[connection signal="pressed" from="Control/Botoes/Door3" to="." method="_on_Door3_pressed"]
[connection signal="transitioned" from="Transition_Scene" to="." method="_on_Transition_Scene_transitioned"]
